post and pieces upload implemented

--- a/angular/src/app/components/post-form-component/post-form-component.component.html
+++ b/angular/src/app/components/post-form-component/post-form-component.component.html
@@ -9,23 +9,20 @@
   <label for="image_data">Image Data:</label>
   <input type="file" id="image_data" name="image_data" (change)="onFileSelected($event)" required>
 
-  <h2>Add Pieces</h2>
-  <div *ngFor="let piece of pieces; let i = index">
-    <label for="brand">Brand:</label>
-    <input type="text" id="brand" name="brand" [(ngModel)]="pieces[i].brand" required>
+  <!-- Input fields for pieces -->
+  <div *ngFor="let piece of piecesData; let i = index">
+    <label for="brand{{i}}">Brand {{i + 1}}:</label>
+    <input type="text" [id]="'brand' + i" [name]="'brand' + i" [(ngModel)]="piece.brand" required>
 
-    <label for="model">Model:</label>
-    <input type="text" id="model" name="model" [(ngModel)]="pieces[i].model" required>
+    <label for="model{{i}}">Model {{i + 1}}:</label>
+    <input type="text" [id]="'model' + i" [name]="'model' + i" [(ngModel)]="piece.model" required>
 
-    <label for="category_id">Category ID:</label>
-    <input type="text" id="category_id" name="category_id" [(ngModel)]="pieces[i].category_id" required>
+    <label for="category_id{{i}}">Category ID {{i + 1}}:</label>
+    <input type="text" [id]="'category_id' + i" [name]="'category_id' + i" [(ngModel)]="piece.category_id" required>
   </div>
 
-  <div *ngIf="pieces.length >= 5">
-    Maximum number of pieces (5) reached.
-  </div>
-
-  <button type="button" (click)="addPiece()" [disabled]="pieces.length >= 5">Add Piece</button>
+  <!-- Add Piece button -->
+  <button type="button" (click)="addPieceInput()">Add Piece</button>
 
   <button type="submit">Upload Post</button>
 </form>
