--- a/angular/src/app/components/home-layout/home-layout.component.css
+++ b/angular/src/app/components/home-layout/home-layout.component.css
@@ -1,7 +1,59 @@
+.left-group, .right-group {
+  display: flex;
+  align-items: center;
+}
+
+.left-group > *:first-child {
+  margin-left: 100px;
+}
+
+.right-group > *:last-child {
+  margin-right: 200px;
+}
+
+.right-group a {
+  padding-right: 145px;
+}
+
 .navbar {
-    height: 100px;
-    display: flex;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+#exit {
+  color: red;
+}
+
+h3 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+#logout {
+  text-align: center;
+  color: red;
+}
+
+.navbar h1 {
+  margin: 0;
+}
+
+.navbar a, .navbar button {
+  margin: 0 10px;  /* Adjust this value as needed */
+  text-decoration: none;
+  color: inherit;
+}
+
+.navbar button {
+  padding: 5px 15px;
+  border: none;
+  background-color: #4CAF50;
+  color: #ffffff;
+  cursor: pointer;
 }
 
 a:hover {
@@ -9,7 +61,69 @@ a:hover {
 }
 
 #home {
-    margin-left: 100px;
+  color: black;
+  text-decoration: none;
+}
+
+#home:hover {
+  text-decoration: underline;
+}
+
+#share {
+  padding: 15px 8px;
+  background-color: black;
+  color: white;
+  border: none;
+  transition: 0.5s;
+}
+
+#share:hover {
+  background-color: rgb(203 203 203);
+  color: black;
+}
+
+#username {
+  margin-left: 20px  /* Adjust this if needed */
+}
+
+#username:hover {
+  text-decoration: underline;
+}
+
+/* ... rest of your CSS ... */
+
+
+/* ... rest of your CSS ... */
+
+
+
+/* ... rest of your CSS ... */
+
+
+.navbar h1 {
+  margin: 0;
+}
+
+.navbar a, .navbar button {
+  margin: 0 10px;
+  text-decoration: none;
+  color: inherit;  /* You can set any color you prefer */
+}
+
+.navbar button {
+  padding: 5px 15px;
+  border: none;
+  background-color: #4CAF50;  /* You can set any background-color you prefer */
+  color: #ffffff;
+  cursor: pointer;
+}
+
+
+a:hover {
+  cursor: pointer;
+}
+
+#home {
     color: black;
     text-decoration: none;
 }
@@ -17,7 +131,6 @@ a:hover {
     text-decoration: underline;
 }
 #share {
-    margin-left: 30px;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 8px;
@@ -28,28 +141,16 @@ a:hover {
     transition: 0.5s;
 }
 #share:hover {
-    background-color: rgb(203 203 203);
-    color: black;
+  background-color: rgb(203 203 203);
+  color: black;
 }
-#search {
-    margin-left: 200px;
-    width: 1000px;
-    text-align: start;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    border-radius: 20px;
-    background-color: rgb(203 203 203);
-    border: none
-}
+
 input[type="text"]::placeholder {
     color: black;
     font-style: italic;
     padding-left: 15px;
     margin-left: 15px;
   }
-#username {
-    margin-left: 200px
-}
 
 .row {
     display: flex;
