--- a/angular/src/app/components/login-component/login-component.component.css
+++ b/angular/src/app/components/login-component/login-component.component.css
@@ -67,5 +67,6 @@ hr {
 }
 
 #form-input .button:hover {
-    background-color: rgb(84, 93, 113);
+    background-color: rgb(203 203 203);
+    color: black;
 }
