--- a/angular/src/app/components/login-component/login-component.component.html
+++ b/angular/src/app/components/login-component/login-component.component.html
@@ -16,7 +16,7 @@
         </div>
         <div id="login-form">
             <form id="form-input" (submit)="login()">
-                <u><h2 id="form-title">Log in, and have access to a creative fashion space in a whole other level.</h2></u><br>
+                <u><h2 id="form-title">Log in to access a creative fashion space on an entirely new level.</h2></u><br>
                 <input type="text" id="username" name="username" class="input" placeholder="USERNAME*" [(ngModel)]="username"><br>
                 <input type="password" id="password" name="password" class="input" placeholder="PASSWORD*" [(ngModel)]="password"><br>
                 <button type="submit" class="button">SIGN IN</button>
