--- a/angular/src/app/components/profile-component/profile-component.component.html
+++ b/angular/src/app/components/profile-component/profile-component.component.html
@@ -1,4 +1,25 @@
-<p>profile-component works!</p>
-<div *ngFor="let image of images" class="container">
-    <a href="home"><img [src]="image" alt="Posting Image" class="item"></a>
+<div class="navbar">
+    <!-- Group 1: Aligned to the left -->
+    <div class="left-group">
+        <a href="home" id="home">HOME</a>
+        <a href="share"><button id="share"> + SHARE</button></a>
+    </div>
+
+    <!-- Centered Item -->
+    <h1>ORNATUM</h1>
+    
+    <!-- Group 2: Aligned to the right -->
+    <div class="right-group">
+        <a [matMenuTriggerFor]="userMenu" id="username">HI, {{username}}!</a>
+        <mat-menu #userMenu="matMenu">
+            <button mat-menu-item (click)="evaluateUser()" id="profile"><mat-icon>person</mat-icon>PROFILE</button>
+            <button mat-menu-item (click)="logout()" id="logout"><mat-icon id="exit">exit_to_app</mat-icon>LOGOUT</button>
+        </mat-menu>
+    </div>
+</div>
+<h3>{{ username }}'s posts:</h3>
+<div class="row">
+<div *ngFor="let image of postings" class="container">
+    <a><img [src]="image.image_data" alt="Posting Image" class="item" (click)="onImageClick(image.id)"></a>
+</div>
 </div>
