--- a/angular/src/app/components/profile-component/profile-component.component.css
+++ b/angular/src/app/components/profile-component/profile-component.component.css
@@ -196,17 +196,17 @@ input[type="text"]::placeholder {
     flex-basis: 25%;
     max-width: 25%;
     padding: 0 4px;
-    width: 25%; /* Set the desired width */
-    height: 500px; /* Set the desired height */
-    overflow: hidden; /* Hide any content that exceeds the container */
+    width: 25%; 
+    height: 500px; 
+    overflow: hidden; 
   }
   
   .container img {
     margin-top: 8px;
     vertical-align: middle;
-    width: 100%; /* Make the image fill the container horizontally */
-    height: 100%; /* Make the image fill the container vertically */
-    object-fit: cover; /* Crop the image to fit the container while maintaining aspect ratio */
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
     border-radius: 50px;
     transition: transform .5s;
   }
