--- a/angular/src/app/components/home-layout/home-layout.component.html
+++ b/angular/src/app/components/home-layout/home-layout.component.html
@@ -4,7 +4,7 @@
         <a href="share"><button id="share"> + SHARE</button></a>
     </div>
 
-    <h1>ORNATUM</h1>
+    <img id="logo" src="/assets/ornatum-high-resolution-logo-color-on-transparent-background.png" alt="">
     
     <div class="right-group">
         <a [matMenuTriggerFor]="userMenu" id="username">HI, {{username}}!</a>
