--- a/angular/src/app/components/login-component/login-component.component.html
+++ b/angular/src/app/components/login-component/login-component.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="nav">
-        <h1>ORNATUM</h1>
+        <img id="logo" src="/assets/ornatum-high-resolution-logo-color-on-transparent-background.png" alt="">
     </div>
     <div id="login-container">
         <div id="login-img">
