--- a/angular/src/app/components/post-form-component/post-form-component.component.html
+++ b/angular/src/app/components/post-form-component/post-form-component.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <!-- Centered Item -->
-  <h1>ORNATUM</h1>
+  <img id="logo" src="/assets/ornatum-high-resolution-logo-color-on-transparent-background.png" alt="">
   
   <!-- Group 2: Aligned to the right -->
   <div class="right-group">
