--- a/angular/src/app/components/login-component/login-component.component.css
+++ b/angular/src/app/components/login-component/login-component.component.css
@@ -11,6 +11,12 @@ a {
     justify-content: center;
 }
 
+#logo {
+    margin-top: 20px;
+    max-width: 15%;
+    max-height: 15%;
+}
+
 #login-container {
     display: grid;
     grid-template-columns: 1fr auto;
