--- a/angular/src/app/components/profile-component/profile-component.component.html
+++ b/angular/src/app/components/profile-component/profile-component.component.html
@@ -6,7 +6,7 @@
     </div>
 
 
-    <h1>ORNATUM</h1>
+    <img id="logo" src="/assets/ornatum-high-resolution-logo-color-on-transparent-background.png" alt="">
     
 
     <div class="right-group">
