--- a/angular/src/app/components/register-component/register-component.component.html
+++ b/angular/src/app/components/register-component/register-component.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="nav">
-        <h1>ORNATUM</h1>
+        <img id="logo" src="/assets/ornatum-high-resolution-logo-color-on-transparent-background.png" alt="">
     </div>
     <div id="register-form">
         <h2><u>Create an account</u></h2>
